src/test/ui/no-implicit-prelude-nested.stderr
error[E0405]: cannot find trait `Add` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:12:14
   |
LL |         impl Add for Test {}
   |              ^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |         use std::ops::Add;
   |

error[E0404]: expected trait, found derive macro `Clone`
  --> $DIR/no-implicit-prelude-nested.rs:13:14
   |
LL |         impl Clone for Test {}
   |              ^^^^^ not a trait
   |
help: consider importing this trait instead
   |
LL |         use std::clone::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:14:14
   |
LL |         impl Iterator for Test {}
   |              ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |         use std::iter::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:15:14
   |
LL |         impl ToString for Test {}
   |              ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |         use std::string::ToString;
   |

error[E0405]: cannot find trait `Writer` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:16:14
   |
LL |         impl Writer for Test {}
   |              ^^^^^^ not found in this scope

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:19:13
   |
LL |             drop(2)
   |             ^^^^ not found in this scope
   |
help: consider importing this function
   |
LL |         use std::mem::drop;
   |

error[E0405]: cannot find trait `Add` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:24:10
   |
LL |     impl Add for Test {}
   |          ^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |     use std::ops::Add;
   |

error[E0404]: expected trait, found derive macro `Clone`
  --> $DIR/no-implicit-prelude-nested.rs:25:10
   |
LL |     impl Clone for Test {}
   |          ^^^^^ not a trait
   |
help: consider importing this trait instead
   |
LL |     use std::clone::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:26:10
   |
LL |     impl Iterator for Test {}
   |          ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |     use std::iter::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:27:10
   |
LL |     impl ToString for Test {}
   |          ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |     use std::string::ToString;
   |

error[E0405]: cannot find trait `Writer` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:28:10
   |
LL |     impl Writer for Test {}
   |          ^^^^^^ not found in this scope

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:31:9
   |
LL |         drop(2)
   |         ^^^^ not found in this scope
   |
help: consider importing this function
   |
LL |     use std::mem::drop;
   |

error[E0405]: cannot find trait `Add` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:40:14
   |
LL |         impl Add for Test {}
   |              ^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |         use std::ops::Add;
   |

error[E0404]: expected trait, found derive macro `Clone`
  --> $DIR/no-implicit-prelude-nested.rs:41:14
   |
LL |         impl Clone for Test {}
   |              ^^^^^ not a trait
   |
help: consider importing this trait instead
   |
LL |         use std::clone::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:42:14
   |
LL |         impl Iterator for Test {}
   |              ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |         use std::iter::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:43:14
   |
LL |         impl ToString for Test {}
   |              ^^^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL |         use std::string::ToString;
   |

error[E0405]: cannot find trait `Writer` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:44:14
   |
LL |         impl Writer for Test {}
   |              ^^^^^^ not found in this scope

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-implicit-prelude-nested.rs:47:13
   |
LL |             drop(2)
   |             ^^^^ not found in this scope
   |
help: consider importing this function
   |
LL |         use std::mem::drop;
   |

warning: use of deprecated attribute `no_implicit_prelude`: deprecated in favor of no_prelude. See https://github.com/rust-lang/rust/issues/20561
  --> $DIR/no-implicit-prelude-nested.rs:7:1
   |
LL | #[no_implicit_prelude]
   | ^^^^^^^^^^^^^^^^^^^^^^ help: may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated attribute `no_implicit_prelude`: deprecated in favor of no_prelude. See https://github.com/rust-lang/rust/issues/20561
  --> $DIR/no-implicit-prelude-nested.rs:36:5
   |
LL |     #[no_implicit_prelude]
   |     ^^^^^^^^^^^^^^^^^^^^^^ help: may be removed in a future compiler version

error: aborting due to 18 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0404, E0405, E0425.
For more information about an error, try `rustc --explain E0404`.
